syntax = "proto3";

package mcppb;

option go_package = "github.com/traego/scaled-mcp/pkg/proto/mcppb;mcppb";

message TryCleanupPreInitialized{}

message CheckSessionTTL{}

message RegisterConnection {
  string connectionId = 1;
}

message RegisterConnectionResponse {
  bool success = 1;
  string error = 2;
}